--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
 		"domain": "facebook.com",
 		"path": "/login/device-based/",
 		"hostOnly": false,
-		"creation": "2025-10-25T08:32:44.748Z",
-		"lastAccessed": "2025-10-25T08:32:44.749Z"
+		"creation": "2025-10-25T08:45:53.876Z",
+		"lastAccessed": "2025-10-25T08:45:53.877Z"
 	},
 	{
 		"key": "datr",
@@ -14,8 +14,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-10-25T08:32:44.749Z",
-		"lastAccessed": "2025-10-25T08:32:44.749Z"
+		"creation": "2025-10-25T08:45:53.877Z",
+		"lastAccessed": "2025-10-25T08:45:53.877Z"
 	},
 	{
 		"key": "sb",
@@ -23,8 +23,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-10-25T08:32:44.749Z",
-		"lastAccessed": "2025-10-25T08:32:44.749Z"
+		"creation": "2025-10-25T08:45:53.877Z",
+		"lastAccessed": "2025-10-25T08:45:53.877Z"
 	},
 	{
 		"key": "ps_l",
@@ -32,8 +32,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-10-25T08:32:44.749Z",
-		"lastAccessed": "2025-10-25T08:32:44.749Z"
+		"creation": "2025-10-25T08:45:53.877Z",
+		"lastAccessed": "2025-10-25T08:45:53.877Z"
 	},
 	{
 		"key": "ps_n",
@@ -41,8 +41,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-10-25T08:32:44.749Z",
-		"lastAccessed": "2025-10-25T08:32:44.749Z"
+		"creation": "2025-10-25T08:45:53.877Z",
+		"lastAccessed": "2025-10-25T08:45:53.877Z"
 	},
 	{
 		"key": "locale",
@@ -50,8 +50,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-10-25T08:32:44.749Z",
-		"lastAccessed": "2025-10-25T08:32:44.749Z"
+		"creation": "2025-10-25T08:45:53.877Z",
+		"lastAccessed": "2025-10-25T08:45:53.877Z"
 	},
 	{
 		"key": "pas",
@@ -59,8 +59,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-10-25T08:32:44.749Z",
-		"lastAccessed": "2025-10-25T08:32:44.749Z"
+		"creation": "2025-10-25T08:45:53.877Z",
+		"lastAccessed": "2025-10-25T08:45:53.877Z"
 	},
 	{
 		"key": "vpd",
@@ -68,26 +68,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-10-25T08:32:44.749Z",
-		"lastAccessed": "2025-10-25T08:32:44.749Z"
-	},
-	{
-		"key": "m_pixel_ratio",
-		"value": "2",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2025-10-25T08:32:44.749Z",
-		"lastAccessed": "2025-10-25T08:32:44.749Z"
-	},
-	{
-		"key": "wd",
-		"value": "360x800",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2025-10-25T08:32:44.749Z",
-		"lastAccessed": "2025-10-25T08:32:44.749Z"
+		"creation": "2025-10-25T08:45:53.877Z",
+		"lastAccessed": "2025-10-25T08:45:53.877Z"
 	},
 	{
 		"key": "c_user",
@@ -95,8 +77,8 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-10-25T08:32:44.749Z",
-		"lastAccessed": "2025-10-25T08:32:44.749Z"
+		"creation": "2025-10-25T08:45:53.877Z",
+		"lastAccessed": "2025-10-25T08:45:53.877Z"
 	},
 	{
 		"key": "xs",
@@ -104,34 +86,34 @@
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-10-25T08:32:44.749Z",
-		"lastAccessed": "2025-10-25T08:32:44.749Z"
+		"creation": "2025-10-25T08:45:53.877Z",
+		"lastAccessed": "2025-10-25T08:45:53.877Z"
 	},
 	{
 		"key": "fr",
-		"value": "0Xm4VFZIapyojBCR5.AWcfBdPMItQ9mCTW3H3eNkiZQJxhqcaclFD_HeQBKA1EqioRHdw.Bo-yGc..AAA.0.0.Bo_IsI.AWdQkJqVcbp8MpD0VfhO6XQPDaM",
+		"value": "0Xm4VFZIapyojBCR5.AWc2-u0RSIoXqxMSJxshfb8VjvJcqZrW6ws8DUugotueDpnfuKA.Bo-yGc..AAA.0.0.Bo_I44.AWctihlayDZhDXU6zeSJ_ZLIxTM",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-10-25T08:32:44.749Z",
-		"lastAccessed": "2025-10-25T08:32:44.749Z"
+		"creation": "2025-10-25T08:45:53.877Z",
+		"lastAccessed": "2025-10-25T08:45:53.877Z"
 	},
 	{
 		"key": "fbl_st",
-		"value": "101633335%3BT%3A29356352",
+		"value": "101615305%3BT%3A29356365",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-10-25T08:32:44.749Z",
-		"lastAccessed": "2025-10-25T08:32:44.749Z"
+		"creation": "2025-10-25T08:45:53.877Z",
+		"lastAccessed": "2025-10-25T08:45:53.877Z"
 	},
 	{
 		"key": "wl_cbv",
-		"value": "v2%3Bclient_version%3A2964%3Btimestamp%3A1761381128%3BCRCM%3A1253466262",
+		"value": "v2%3Bclient_version%3A2964%3Btimestamp%3A1761381944%3BCRCM%3A121326791",
 		"domain": "facebook.com",
 		"path": "/",
 		"hostOnly": false,
-		"creation": "2025-10-25T08:32:44.749Z",
-		"lastAccessed": "2025-10-25T08:32:44.749Z"
+		"creation": "2025-10-25T08:45:53.877Z",
+		"lastAccessed": "2025-10-25T08:45:53.877Z"
 	}
 ]
